<resources>
    <string name="app_name">MyDiary</string>
    <string name="title_label">Title</string>
    <string name="description_label">Description</string>
    <string name="save_label">SAVE</string>
    <string name="add_note_label">Add note</string>
    <string name="login_label">Login</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back_text">Welcome Back!</string>
    <string name="login_to_access_your_notes_text">Login to access your notes</string>
    <string name="don_t_have_an_account_register_now_text">Don\'t have an account? <font color="#0000FF"><b>Register Now</b></font></string>
    <string name="create_new_account_text">Create New Account</string>
    <string name="please_provide_all_the_required_information_text">Please provide all the required information</string>
    <string name="email_label">Email</string>
    <string name="sign_up_caps_label">SIGN UP</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="forgot_password_text">Forgot password?</string>

    <string name="ok_text">OK</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>