<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700"
        android:orientation="vertical"
        tools:context=".ui.fragment.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".ui.fragment.LoginFragment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account_text"
                android:textColor="@color/off_white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_provide_all_the_required_information_text"
                android:textColor="@color/off_white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/username_label"
                android:textColor="@color/off_white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/off_white"
                android:hint="@string/username_label"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/off_white"
                android:textColorHint="@color/teal_700"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/email_label"
                android:textColor="@color/off_white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/off_white"
                android:hint="@string/email_label"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/off_white"
                android:textColorHint="@color/teal_700"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/password_label"
                android:textColor="@color/off_white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/off_white"
                android:hint="@string/password_label"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/off_white"
                android:textColorHint="@color/teal_700"
                android:textSize="16sp" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/blue_dark"
                android:text="@string/sign_up_caps_label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:autoLink="all"
                android:text="@string/already_have_an_account_text"
                android:textColor="@color/off_white"
                android:textSize="14sp" />
        </LinearLayout>
    </FrameLayout>
</layout>