<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addNoteActivity"
            type="com.example.mydiary.ui.activity.AddNoteActivity" />

        <variable
            name="name"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.activity.AddNoteActivity">

        <EditText
            android:id="@+id/date_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10 10 2022"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_label"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/date_et" />

        <EditText
            android:id="@+id/body_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/description_label"
            app:layout_constraintTop_toBottomOf="@id/title_et" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/purple_700"
            android:onClick="@{() -> addNoteActivity.onSaveClick()}"
            android:text="@string/save_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/body_et" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>