<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.fragment.LoginFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:hint="@string/username_label"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/teal_700"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/white"
            android:hint="@string/password_label"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/teal_700"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue_dark"
            android:text="@string/login_label"
            android:onClick="onClickLogin"
            android:textSize="16sp" />
    </LinearLayout>
</FrameLayout>